--------------------------------------------------------------------------------
 Fusion 1.213 - August 29th, 2004
--------------------------------------------------------------------------------
- 11-04-04: Added NPC command "resetmyareamob" for jobquests. [Tsusai]
- 11-04-04: Fixed pet hunger updating after feeding. [Darkhelmet]
- 11-03-04: Added NPC command "getareausers" for Priest quest. [Tsusai]
- 11-03-04: Added a countermeasure for preventing setting off OnTouch multiple times. [Tsusai]
- 11-03-04: JCon: Minor tweak to kick/ban procedure. [Tsusai]
- 11-01-04: Cleaned up the structure of #changeskill. [Trihan]
- 11-01-04: Cleaned up the structure of #zeny. [Trihan]
- 11-01-04: Cleaned up the structure of #superstats. [Trihan]
- 11-01-04: Cleaned up the structure of #statall. [Trihan]
- 11-01-04: Cleaned up the structure of #skillall. [Trihan]
- 11-01-04: Cleaned up the structure of #skillpoint. [Trihan]
- 11-01-04: Cleaned up the structure of #changestat. [Trihan]
- 11-01-04: Cleaned up the structure of #jlevel. [Trihan]
- 11-01-04: Cleaned up the structure of #blevel. [Trihan]
- 10-31-04: REED: Updated autoconversion of sample Pre-REED data. [AlexKreuz]
- 10-30-04: Added a missing semi-colin (compiler didn't see this error, odd).  [Tsusai]
- 10-30-04: Commented out some jobchange; data that is messing up going to high classes. [Tsusai]
- 10-30-04: REED: Tested & Updated autoconversion of sample Pre-REED data. [AlexKreuz]
- 10-30-04: REED: Completed restructure of Deletion Algorithms. [AlexKreuz]
- 10-28-04: Cleaned up the structure of #job. [Trihan]
- 10-28-04: Cleaned up the structure of #banish. [Trihan]
- 10-27-04: JCon: Fixed Chara:Stat map and parameter related things. [Tsusai]
- 10-27-04: JCon: Character ID changing via Character:Stats disabled.  Read-only. [Tsusai]
- 10-27-04: JCon: Name changing via Character:Stats disabled.  Read-only. [Tsusai]
- 10-27-04: Commented out MapUnload from INI since it's disabled. [Tsusai]