@@ -9860,6 +9860,23 @@ Begin
                             tn.Script[k].Data3[2] := StrToInt(SL1[3]);
                             tn.Script[k].Data3[3] := StrToInt(SL1[4]);
 							Inc(k);
+                        end else if str = 'remotenpctimer' then begin //------- 81 remotenpctimer
+							if sl1.Count <> 2 then begin
+								ScriptErr(SCRIPT_FUNCTN_ERR, [ScriptPath, lines, str]);
+								Exit;
+							end;
+							val(SL1[1], i, j);
+							if (j = 0) AND ((i < 0) OR (i > 8)) then begin
+								ScriptErr(SCRIPT_RANGE1_ERR, [ScriptPath, lines, str]);
+								Exit;
+							end;
+							SetLength(tn.Script, k + 1);
+							tn.Script[k].ID := 81;
+							SetLength(tn.Script[k].Data1, 1);
+							SetLength(tn.Script[k].Data3, 1);
+							tn.Script[k].Data1[0] := SL1[0];
+							tn.Script[k].Data3[0] := StrToInt(SL1[1]);
+							Inc(k);
 						end else if str = 'script' then begin //------- 99 script
 							if sl1.Count <> 1 then begin
 								ScriptErr(SCRIPT_FUNCTN_ERR, [ScriptPath, lines, str]);
